# ML-Notebook-Library

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
explanation/: gradient_descent.py  load_saved_model.py  saving_model.py
notebooks/: evaluation.ipynb  model_evaluation.ipynb
notebooks/01_maths/: 01_calculus.ipynb  02_linear_algebra.ipynb  03_probability.ipynb  04_statistics.ipynb
notebooks/02_python-refresh/: 01_python_basics.ipynb  02_oop.ipynb  03_python_for_ml.ipynb
notebooks/03_data-science/: 01_numpy_pandas.ipynb  02_data_cleaning.ipynb  03_eda_visualization.ipynb  04_feature_engineering.ipynb
notebooks/04_ml-algorithms/: ROADMAP.md  model_evaluation.ipynb
notebooks/04_ml-algorithms/model_evaluation/: 01_metrics.ipynb  02_cross_validation.ipynb  03_bias_variance_tradeoff.ipynb
notebooks/04_ml-algorithms/regression/: 01_linear_regression.ipynb  02_polynomial_regression.ipynb  03_regularization.ipynb
notebooks/maths/: calculus.ipynb  linear_algebra.ipynb  probability.ipynb  statistics.ipynb
notebooks/ml-algorithms/: model_evaluation.ipynb
notebooks/ml-algorithms/regression/: linear_regression.ipynb  polynomial_regression.ipynb  regularization.ipynb
notebooks/python-refresh/: oop.ipynb  python_basics.ipynb  python_for_ml.ipynb
scripts/: menu.sh
