[project]
name = "ai-microprojects"
version = "0.1.0"
authors = [{ name = "Chitrank Agnihoti", email = "chitrank2050@gmail.com" }]
description = "Learning AI with microprojects in the form of notebooks."
readme = "README.md"
requires-python = ">=3.12"

# Production dependencies
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = ["ruff>=0.14.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
